# nephila

./: .gitignore  Cargo.toml  README.md  _typos.toml  deny.toml  flake.nix  justfile  meridian.toml  nephila.toml
.github/: dependabot.yml
.github/workflows/: audit.yml  ci.yml
config/: ferrex.toml
crates/connector/: Cargo.toml
crates/connector/src/: anthropic_api.rs  claude_code.rs  config.rs  dispatch.rs  error.rs  event_draft.rs  hitl.rs  lib.rs  message.rs  openai_compatible.rs  resume.rs  session.rs  stream.rs  task.rs  types.rs
crates/connector/tests/: resume_e2e.rs  session_pause.rs  session_smoke.rs  stderr_redaction.rs
crates/connector/tests/fixtures/fake_claude/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: agent.rs  channel.rs  checkpoint.rs  command.rs  config.rs  directive.rs  error.rs  event.rs  id.rs  interrupt.rs  lib.rs  memory.rs  session.rs  session_event.rs  sql.rs  store.rs  summarizer.rs
crates/core/tests/: agent_session_assignment.rs  command_debug.rs  session_apply.rs  session_event_serde.rs  session_replay_determinism.rs
crates/embedding/: .gitignore  Cargo.toml
crates/embedding/src/: fastembed.rs  lib.rs
crates/eventsourcing/: Cargo.toml
crates/eventsourcing/src/: aggregate.rs  envelope.rs  id.rs  lib.rs  outcome.rs  search.rs  snapshot.rs  store.rs  tracing.rs
crates/lifecycle/: Cargo.toml
crates/lifecycle/src/: claude_code_driver.rs  crash_summarizer.rs  lib.rs  lifecycle_supervisor.rs  process.rs  session_supervisor.rs  supervisor.rs  token_tracker.rs
crates/lifecycle/tests/: checkpoint_pairing.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: discovery.rs  http.rs  lib.rs  server.rs  state.rs  tools.rs
crates/mcp/src/tools/: agent.rs  checkpoint.rs  fork.rs  hitl.rs  lifecycle.rs  memory.rs  objective.rs
crates/mcp/tests/: checkpoint_no_double_emit.rs
crates/meridian-core/: Cargo.toml
crates/meridian-core/src/: agent.rs  embedding.rs  error.rs  id.rs  lib.rs  objective.rs  sql.rs
crates/meridian-lifecycle/src/: process.rs  supervisor.rs
crates/meridian-mcp/: Cargo.toml
crates/meridian-mcp/src/: server.rs  tools.rs
crates/meridian-mcp/src/tools/: hitl.rs  objective.rs
crates/meridian-store/: Cargo.toml
crates/meridian-store/src/: checkpoint.rs  hitl.rs  lib.rs  schema.rs  test_util.rs  writer.rs
crates/meridian-store/tests/: context_reset.rs
crates/meridian-tui/: Cargo.toml
crates/meridian-tui/src/: input.rs  layout.rs  panels.rs
crates/meridian-tui/src/panels/: event_log.rs
crates/store/: Cargo.toml
crates/store/benches/: subscribe_after_throughput.rs
crates/store/src/: agent.rs  blob.rs  checkpoint.rs  domain_event.rs  event.rs  ferrex_store.rs  interrupt.rs  lib.rs  lockfile.rs  memory.rs  metrics.rs  objective.rs  read_pool.rs  resilient_subscribe.rs  retention.rs  schema.rs  search_provider.rs  subscribe.rs  test_util.rs  tracing_store.rs  util.rs  writer.rs
crates/store/tests/: blob_spillover.rs  context_reset.rs  pragma_settings.rs  read_pool_concurrent.rs  read_pool_panic_safety.rs  resilient_subscribe_livelock.rs  sequence_cache_rollback.rs  sequence_stamping_upgrade.rs  snapshot_does_not_block_writer.rs  snapshot_trigger_b.rs  subscribe_after_ordering.rs
crates/tui/: Cargo.toml
crates/tui/src/: commands.rs  goals.rs  input.rs  layout.rs  lib.rs  modal.rs  panels.rs  tui_command.rs  tui_tracing.rs
crates/tui/src/panels/: agent_status.rs  agent_tree.rs  event_log.rs  hotkey_bar.rs  objective_tree.rs  session_pane.rs  tasks.rs
crates/tui/src/panels/session_pane/: input.rs  pump.rs
crates/tui/tests/: pump_hitl.rs  session_input_e2e.rs  session_pane_render.rs
docs/: architecture-overview.md  spec-langgraph-patterns.md  status.md
docs/adr/: 0001-session-as-event-sourced-aggregate.md  0002-eventenvelope-sequence-stamping.md  0003-eventenvelope-sequence-encapsulation.md
docs/plans/: 2026-05-03-claude-session-streaming.md  2026-05-05-streaming-review-fixes.md
docs/research/: 01-web-search-findings.md  02-github-findings.md  03-blogs-videos-findings.md  04-academic-findings.md  05-quine-deep-dive.md  06-xmemory-deep-dive.md  07-langgraph-deep-dive.md  08-rig-evaluation.md
docs/specs/: 2026-05-03-claude-session-streaming-design.md
nix/: onnxruntime.nix
