[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/store",
    "crates/embedding",
    "crates/lifecycle",
    "crates/mcp",
    "crates/tui",
    "bin",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
# Internal
meridian-core = { path = "crates/core" }
meridian-store = { path = "crates/store" }
meridian-embedding = { path = "crates/embedding" }
meridian-lifecycle = { path = "crates/lifecycle" }
meridian-mcp = { path = "crates/mcp" }
meridian-tui = { path = "crates/tui" }

# Async
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
thiserror = "2"
color-eyre = "0.6"

# IDs and time
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Storage
rusqlite = { version = "0.35", features = ["bundled", "vtab"] }
sqlite-vec = "0.1"

# HTTP / MCP
rmcp = { version = "1.3", features = ["server", "macros", "transport-streamable-http-server"] }
axum = "0.8"
schemars = "0.8"

# Embeddings (local ONNX)
fastembed = "4"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# CLI
clap = { version = "4", features = ["derive"] }

# Enum utilities
strum = { version = "0.27", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
