[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/store",
    "crates/embedding",
    "crates/lifecycle",
    "crates/mcp",
    "crates/connector",
    "crates/eventsourcing",
    "crates/tui",
    "bin",
]

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
multiple_crate_versions = "allow"
implicit_return = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
missing_safety_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
similar_names = "allow"
too_many_lines = "allow"
cognitive_complexity = "allow"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Dmytro Onypko <vaporif@proton.me>"]
description = "AI orchestration framework with RAG capabilities"
repository = "https://github.com/vaporif/meridian"
readme = "README.md"
keywords = ["ai", "orchestration", "rag", "llm", "embeddings"]
categories = ["development-tools"]

[workspace.dependencies]
# Internal
meridian-core = { path = "crates/core" }
meridian-store = { path = "crates/store" }
meridian-embedding = { path = "crates/embedding" }
meridian-lifecycle = { path = "crates/lifecycle" }
meridian-mcp = { path = "crates/mcp" }
meridian-connector = { path = "crates/connector" }
meridian-eventsourcing = { path = "crates/eventsourcing" }
meridian-tui = { path = "crates/tui" }

# Async
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1"

# Error handling
thiserror = "2"
color-eyre = "0.6"

# IDs and time
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Storage
rusqlite = { version = "0.39", features = ["bundled", "vtab"] }
sqlite-vec = "0.1"

# HTTP / MCP
rmcp = { version = "1.3", features = ["server", "macros", "transport-streamable-http-server"] }
axum = "0.8"
schemars = "1.2"

# Embeddings (local ONNX)
fastembed = "5"
ort = { version = "=2.0.0-rc.11", default-features = false, features = ["load-dynamic"] }

# TUI
ratatui = "0.30"
crossterm = "0.29"

# CLI
clap = { version = "4", features = ["derive"] }

# Enum utilities
strum = { version = "0.28", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
