[package]
name = "nephila-connector"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
nephila-core = { workspace = true }
nephila-eventsourcing = { workspace = true }
nephila-store = { workspace = true }
tokio = { workspace = true, features = ["process", "sync", "fs", "time", "io-util", "rt"] }
tokio-util = { workspace = true }
futures = { workspace = true }
libc = { workspace = true }
nix = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
claude-codes = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
tempfile = { workspace = true }
futures = { workspace = true }

[[bin]]
name = "fake_claude"
path = "tests/fixtures/fake_claude/src/main.rs"

[lints]
workspace = true
