[package]
name = "nephila-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
rusqlite = ["dep:rusqlite"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
toml = { workspace = true }
strum = { workspace = true }
rusqlite = { workspace = true, optional = true }
nephila-eventsourcing = { workspace = true }
ferrex-core = { workspace = true }

[dev-dependencies]
