[package]
name = "meridian-lifecycle"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
meridian-core = { workspace = true }
tokio = { workspace = true, features = ["sync", "time"] }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
uuid = { workspace = true }
