[package]
name = "nephila-lifecycle"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
nephila-core = { workspace = true }
nephila-store = { workspace = true }
tokio = { workspace = true, features = ["sync", "time", "rt"] }
serde_json = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
uuid = { workspace = true }
proptest = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "time"] }
