[package]
name = "nephila-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
nephila-core = { workspace = true }
nephila-store = { workspace = true }
ferrex-core = { workspace = true }
rmcp = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
schemars = { workspace = true }
tokio-util = { workspace = true }
