[package]
name = "meridian-core"
version.workspace = true
edition.workspace = true

[features]
rusqlite = ["dep:rusqlite"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
toml = { workspace = true }
strum = { workspace = true }
rusqlite = { workspace = true, optional = true }

[dev-dependencies]
