[package]
name = "nephila-store"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
# Exposes the test seams (`SubscribeAfterHooks`, `subscribe_after_with_hooks`,
# `raw_seed_for_test`) needed by integration tests under `tests/`.
# NOT enabled in release builds; the seams compile out entirely.
test-seam = []

[dependencies]
nephila-core = { workspace = true, features = ["rusqlite"] }
nephila-eventsourcing = { workspace = true }
ferrex-core = { workspace = true }
ferrex-store = { workspace = true }
ferrex-embed = { workspace = true }
qdrant-client = { workspace = true }
rusqlite = { workspace = true }
sqlite-vec = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
blake3 = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
nix = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
criterion = { workspace = true }
tempfile = { workspace = true }
# Self-reference so integration tests under `tests/` see the test-seam items.
# `cargo test --workspace` enables this transparently.
nephila-store = { path = ".", features = ["test-seam"] }

[[bench]]
name = "subscribe_after_throughput"
harness = false
